--- a/public/themes/viva-light/theme.css
+++ b/public/themes/viva-light/theme.css
@@ -1,4 +1,6 @@
 :root {
+  font-family: Poppins, sans-serif;
+  --font-family:Poppins, sans-serif;
   --surface-a:#ffffff;
   --surface-b:#f5f5f5;
   --surface-c:#edf0fA;
@@ -9,7 +11,6 @@
   --text-color-secondary:#898989;
   --primary-color:#5472d4;
   --primary-color-text:#ffffff;
-  --font-family:Poppins, sans-serif;
   --surface-0: #ffffff;
   --surface-50: #f1f3f5;
   --surface-100: #e2e6eb;
