--- a/public/themes/lara-light-blue/theme.css
+++ b/public/themes/lara-light-blue/theme.css
@@ -71,7 +71,8 @@
 }
 
 .p-component {
-  font-family: "Inter var", sans-serif;
+  font-family: inherit;
+  font-feature-settings: inherit;
   font-size: 1rem;
   font-weight: normal;
 }
@@ -104,7 +105,8 @@
 
 .p-link {
   font-size: 1rem;
-  font-family: "Inter var", sans-serif;
+  font-family: inherit;
+  font-feature-settings: inherit;
   border-radius: 6px;
 }
 .p-link:focus {
@@ -284,8 +286,9 @@
   padding: 0.375rem 0;
 }
 .p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-input-token input {
-  font-family: "Inter var", sans-serif;
-  font-size: 1rem;
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-size: inherit;
   color: #495057;
   padding: 0;
   margin: 0;
@@ -747,8 +750,9 @@
   padding: 0.375rem 0;
 }
 .p-chips .p-chips-multiple-container .p-chips-input-token input {
-  font-family: "Inter var", sans-serif;
-  font-size: 1rem;
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-size: inherit;
   color: #495057;
   padding: 0;
   margin: 0;
@@ -1112,7 +1116,8 @@
 }
 
 .p-inputtext {
-  font-family: "Inter var", sans-serif;
+  font-family: inherit;
+  font-feature-settings: inherit;
   font-size: 1rem;
   color: #495057;
   background: #ffffff;
@@ -5918,8 +5923,9 @@
   padding: 1.25rem;
 }
 .p-terminal .p-terminal-input {
-  font-size: 1rem;
-  font-family: "Inter var", sans-serif;
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-size: inherit;
 }
 
 .p-button-label {
