--- a/public/themes/mira/theme.css
+++ b/public/themes/mira/theme.css
@@ -81,7 +81,8 @@
 }
 
 .p-component {
-  font-family: "Inter", sans-serif;
+  font-family: inherit;
+  font-feature-settings: inherit;
   font-size: 1rem;
   font-weight: normal;
 }
@@ -114,7 +115,8 @@
 
 .p-link {
   font-size: 1rem;
-  font-family: "Inter", sans-serif;
+  font-family: inherit;
+  font-feature-settings: inherit;
   border-radius: 4px;
 }
 .p-link:focus {
@@ -294,8 +296,9 @@
   padding: 0.25rem 0;
 }
 .p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-input-token input {
-  font-family: "Inter", sans-serif;
-  font-size: 1rem;
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-size: inherit;
   color: #4C566A;
   padding: 0;
   margin: 0;
@@ -757,8 +760,9 @@
   padding: 0.25rem 0;
 }
 .p-chips .p-chips-multiple-container .p-chips-input-token input {
-  font-family: "Inter", sans-serif;
-  font-size: 1rem;
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-size: inherit;
   color: #4C566A;
   padding: 0;
   margin: 0;
@@ -1122,7 +1126,8 @@
 }
 
 .p-inputtext {
-  font-family: "Inter", sans-serif;
+  font-family: inherit;
+  font-feature-settings: inherit;
   font-size: 1rem;
   color: #4C566A;
   background: #ffffff;
@@ -5977,8 +5982,9 @@
   padding: 1rem;
 }
 .p-terminal .p-terminal-input {
-  font-size: 1rem;
-  font-family: "Inter", sans-serif;
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-size: inherit;
 }
 
 /* Customizations to the designer theme should be defined here */
