--- a/assets/styles/layout/_code.scss
+++ b/assets/styles/layout/_code.scss
@@ -402,8 +402,7 @@ pre[class*="language-"] {
         margin: 0;
         color: var(--surface-900);
         font-size: 14px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+        border-radius: 10px;
     }
     }
 
